Update tumbler parser notebook

--- a/notebooks/parse_tumblr.ipynb
+++ b/notebooks/parse_tumblr.ipynb
@@ -14,259 +14,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['OAuth', 'SecretKeyOAuth'])\n"
-     ]
-    }
-   ],
-   "source": [
-    "keys = {}\n",
-    "\n",
-    "with open('../OAuth.keys', 'r') as file:\n",
-    "\tfor line_key in file:\n",
-    "\t\tparts = line_key.strip().split(':')\n",
-    "\t\tkeys[parts[0]] = parts[1]\n",
-    "print(keys.keys())"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pytumblr in c:\\users\\me\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (0.1.2)\n",
-      "Requirement already satisfied: future in c:\\users\\me\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pytumblr) (1.0.0)\n",
-      "Requirement already satisfied: requests-oauthlib in c:\\users\\me\\appdata\\roaming\\python\\python311\\site-packages (from pytumblr) (1.3.1)\n",
-      "Requirement already satisfied: oauthlib>=3.0.0 in c:\\users\\me\\appdata\\roaming\\python\\python311\\site-packages (from requests-oauthlib->pytumblr) (3.2.2)\n",
-      "Requirement already satisfied: requests>=2.0.0 in c:\\users\\me\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests-oauthlib->pytumblr) (2.31.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\me\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests>=2.0.0->requests-oauthlib->pytumblr) (3.3.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\me\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests>=2.0.0->requests-oauthlib->pytumblr) (3.4)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\me\\appdata\\roaming\\python\\python311\\site-packages (from requests>=2.0.0->requests-oauthlib->pytumblr) (2.0.5)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\me\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests>=2.0.0->requests-oauthlib->pytumblr) (2023.7.22)\n",
-      "Requirement already satisfied: unicodecsv in c:\\users\\me\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (0.14.1)\n",
-      "Requirement already satisfied: unidecode in c:\\users\\me\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (1.3.8)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install pytumblr\n",
-    "!pip install unicodecsv\n",
-    "!pip install unidecode"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "import pytumblr, datetime\n",
-    "import csv\n",
-    "from unidecode import unidecode\n",
+    "import pytumblr\n",
     "import calendar\n",
     "import time\n",
-    "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os"
+    "import pandas as pd"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-31T19:26:40.320337Z",
+     "start_time": "2024-03-31T19:26:38.456490Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "with open('../api_key.keys') as f:\n",
+    "\tapi_key = f.readline()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-31T19:26:43.028692Z",
+     "start_time": "2024-03-31T19:26:43.019748Z"
+    }
+   },
+   "execution_count": 2
+  },
+  {
+   "cell_type": "code",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Searching Tumblr for 100 posts tagged 'half-joke'\n",
-      "Batch 1 of 5\n",
-      "20 results retreived\n",
-      "Successfully Wrote Row for post from 2024-03-30 01:18:08 GMT\n",
-      "Successfully Wrote Row for post from 2024-03-29 09:26:46 GMT\n",
-      "Successfully Wrote Row for post from 2024-03-26 08:45:26 GMT\n",
-      "Successfully Wrote Row for post from 2024-03-26 05:20:45 GMT\n",
-      "Successfully Wrote Row for post from 2024-03-21 07:15:09 GMT\n",
-      "Successfully Wrote Row for post from 2024-03-18 11:52:37 GMT\n",
-      "Successfully Wrote Row for post from 2024-03-12 01:04:08 GMT\n",
-      "Successfully Wrote Row for post from 2024-03-06 22:24:43 GMT\n",
-      "Successfully Wrote Row for post from 2024-03-01 15:19:33 GMT\n",
-      "Successfully Wrote Row for post from 2024-02-25 22:31:53 GMT\n",
-      "Successfully Wrote Row for post from 2024-02-22 04:48:43 GMT\n",
-      "Successfully Wrote Row for post from 2024-02-21 04:23:38 GMT\n",
-      "Successfully Wrote Row for post from 2024-02-18 13:13:03 GMT\n",
-      "Successfully Wrote Row for post from 2024-02-17 12:25:51 GMT\n",
-      "Successfully Wrote Row for post from 2024-02-16 12:24:44 GMT\n",
-      "Successfully Wrote Row for post from 2024-02-14 01:59:29 GMT\n",
-      "Successfully Wrote Row for post from 2024-02-13 03:17:26 GMT\n",
-      "Successfully Wrote Row for post from 2024-02-11 17:23:51 GMT\n",
-      "Successfully Wrote Row for post from 2024-02-07 20:06:44 GMT\n",
-      "Successfully Wrote Row for post from 2024-02-05 04:56:26 GMT\n",
-      "Batch 2 of 5\n",
-      "20 results retreived\n",
-      "Successfully Wrote Row for post from 2024-02-04 18:57:45 GMT\n",
-      "Successfully Wrote Row for post from 2024-02-04 03:15:39 GMT\n",
-      "Successfully Wrote Row for post from 2024-02-01 07:55:39 GMT\n",
-      "Successfully Wrote Row for post from 2024-01-29 09:08:01 GMT\n",
-      "Successfully Wrote Row for post from 2024-01-26 21:16:52 GMT\n",
-      "Successfully Wrote Row for post from 2024-01-26 19:10:10 GMT\n",
-      "Successfully Wrote Row for post from 2024-01-24 22:07:36 GMT\n",
-      "Successfully Wrote Row for post from 2024-01-23 04:10:38 GMT\n",
-      "Successfully Wrote Row for post from 2024-01-16 17:43:15 GMT\n",
-      "Successfully Wrote Row for post from 2024-01-13 03:49:45 GMT\n",
-      "Successfully Wrote Row for post from 2024-01-12 20:05:19 GMT\n",
-      "Successfully Wrote Row for post from 2024-01-04 03:38:04 GMT\n",
-      "Successfully Wrote Row for post from 2024-01-03 04:23:58 GMT\n",
-      "Successfully Wrote Row for post from 2024-01-03 01:09:08 GMT\n",
-      "Successfully Wrote Row for post from 2024-01-02 12:59:40 GMT\n",
-      "Successfully Wrote Row for post from 2024-01-01 10:20:43 GMT\n",
-      "Successfully Wrote Row for post from 2023-12-27 06:56:08 GMT\n",
-      "Successfully Wrote Row for post from 2023-12-23 22:38:39 GMT\n",
-      "Successfully Wrote Row for post from 2023-12-21 22:41:22 GMT\n",
-      "Successfully Wrote Row for post from 2023-12-21 19:18:12 GMT\n",
-      "Batch 3 of 5\n",
-      "20 results retreived\n",
-      "Successfully Wrote Row for post from 2023-12-16 23:52:02 GMT\n",
-      "Successfully Wrote Row for post from 2023-12-16 04:09:35 GMT\n",
-      "Successfully Wrote Row for post from 2023-12-12 12:05:01 GMT\n",
-      "Successfully Wrote Row for post from 2023-12-11 02:05:44 GMT\n",
-      "Successfully Wrote Row for post from 2023-12-03 01:16:21 GMT\n",
-      "Successfully Wrote Row for post from 2023-11-27 16:10:25 GMT\n",
-      "Successfully Wrote Row for post from 2023-11-27 10:03:23 GMT\n",
-      "Successfully Wrote Row for post from 2023-11-16 14:15:26 GMT\n",
-      "Successfully Wrote Row for post from 2023-11-15 16:00:26 GMT\n",
-      "Successfully Wrote Row for post from 2023-11-13 17:56:01 GMT\n",
-      "Successfully Wrote Row for post from 2023-11-11 22:13:09 GMT\n",
-      "Successfully Wrote Row for post from 2023-11-08 17:08:30 GMT\n",
-      "Successfully Wrote Row for post from 2023-11-08 02:59:15 GMT\n",
-      "Successfully Wrote Row for post from 2023-11-07 12:02:28 GMT\n",
-      "Successfully Wrote Row for post from 2023-11-02 21:02:57 GMT\n",
-      "Successfully Wrote Row for post from 2023-10-25 00:32:22 GMT\n",
-      "Successfully Wrote Row for post from 2023-10-24 02:45:27 GMT\n",
-      "Successfully Wrote Row for post from 2023-10-22 18:59:13 GMT\n",
-      "Successfully Wrote Row for post from 2023-10-18 22:44:21 GMT\n",
-      "Successfully Wrote Row for post from 2023-10-16 01:13:59 GMT\n",
-      "Batch 4 of 5\n",
-      "20 results retreived\n",
-      "Successfully Wrote Row for post from 2023-10-13 11:19:55 GMT\n",
-      "Successfully Wrote Row for post from 2023-10-11 13:08:48 GMT\n",
-      "Successfully Wrote Row for post from 2023-10-10 07:34:49 GMT\n",
-      "Successfully Wrote Row for post from 2023-10-10 06:02:37 GMT\n",
-      "Successfully Wrote Row for post from 2023-10-09 18:27:50 GMT\n",
-      "Successfully Wrote Row for post from 2023-10-08 18:16:07 GMT\n",
-      "Successfully Wrote Row for post from 2023-10-03 16:33:57 GMT\n",
-      "Successfully Wrote Row for post from 2023-09-30 19:15:52 GMT\n",
-      "Successfully Wrote Row for post from 2023-09-30 07:18:33 GMT\n",
-      "Successfully Wrote Row for post from 2023-09-28 23:46:05 GMT\n",
-      "Successfully Wrote Row for post from 2023-09-21 03:28:14 GMT\n",
-      "Successfully Wrote Row for post from 2023-09-18 22:20:22 GMT\n",
-      "Successfully Wrote Row for post from 2023-09-18 20:02:06 GMT\n",
-      "Successfully Wrote Row for post from 2023-09-16 02:58:32 GMT\n",
-      "Successfully Wrote Row for post from 2023-09-09 05:10:47 GMT\n",
-      "Successfully Wrote Row for post from 2023-09-07 21:21:18 GMT\n",
-      "Successfully Wrote Row for post from 2023-09-07 05:12:51 GMT\n",
-      "Successfully Wrote Row for post from 2023-09-03 19:14:25 GMT\n",
-      "Successfully Wrote Row for post from 2023-09-02 16:56:50 GMT\n",
-      "Successfully Wrote Row for post from 2023-09-02 06:50:31 GMT\n",
-      "Finished!\n",
-      "Saved CSV to ../datasets/data_from_tumblr/TumblrSearch-1711901453-half-joke.csv\n"
+      "affectionate: ['affectionate']\n",
+      "copypasta: ['copypasta', 'copypaste', 'repeated text']\n",
+      "clickbait: ['clickbait']\n",
+      "fake: ['fake']\n",
+      "genuine: ['genuine']\n",
+      "genuine question: ['genuine question']\n",
+      "half joking: ['half joking', 'half-joking', 'half joke', 'half-joke', 'halfjoke']\n",
+      "hyperbole: ['hyperbole']\n",
+      "inside joke: ['inside joke', 'insidejoke', 'insidejoking', 'inside-joke', 'inside-joking']\n",
+      "joking: ['joking', 'joke']\n",
+      "lyrics: ['lyrics']\n",
+      "light-hearted: ['light-hearted', 'light hearted', 'lighthearted']\n",
+      "literal: ['literal', 'literally']\n",
+      "little upset: ['little upset', 'littleupset', 'little-upset']\n",
+      "metaphorical: ['metaphorical']\n",
+      "not a vent: ['not a vent', 'notavent', 'not-a-vent']\n",
+      "nobody here: ['nobodyhere', 'nobody-here']\n",
+      "negative connotation: ['negative connotation', 'negetiveconnotation', 'negative-connotation']\n",
+      "neutral connotation: ['neutral connotation', 'neutralconnotation', 'neutral-connotation']\n",
+      "not forced: ['not forced', 'not-forced', 'notforced']\n",
+      "not mad: ['not mad', 'not-mad', 'notmad']\n",
+      "not passive aggressive: ['not passive aggressive', 'not passive-aggressive', 'not-passive-aggressive', 'notpassiveaggressive']\n",
+      "not subtweeting: ['not subtweeting', 'notsubtweeting']\n",
+      "non-serious: ['non-serious', 'non serious', 'nonserious', 'not serious', 'not-serious', 'notserious']\n",
+      "non-sexual intent: ['non-sexual intent', 'not-sexual intent', 'non-sexual-intent', 'nonsexualintent', 'not-sexual-intent', 'notsexualintent']\n",
+      "platonic: ['platonic']\n",
+      "passive aggressive: ['passive aggressive', 'passive-aggressive']\n",
+      "positive connotation: ['positive connotation', 'positive-connotation', 'positiveconnotation']\n",
+      "quote: ['quote']\n",
+      "romantic: ['romantic']\n",
+      "reference: ['reference']\n",
+      "rhetorical: ['rhetorical', 'rhetorical question', 'rhetorical-question', 'rhetoricalquestion']\n",
+      "sarcastic: ['sarcastic', 'sarcasm']\n",
+      "serious: ['serious']\n",
+      "sexual intent: ['sexual intent', ' sexualintent', 'sexual-intent']\n",
+      "teasing: ['teasing']\n",
+      "threat: ['threat']\n",
+      "ironic: ['ironic']\n",
+      "not at you: ['not at you', 'not-at-you', 'notatyou']\n",
+      "nothing personal: ['nothing personal', 'nothing-personal', 'nothingpersonal']\n"
      ]
     }
    ],
    "source": [
-    "# Enter your Tumblr API key here:\n",
-    "tumblr = pytumblr.TumblrRestClient(\n",
-    "    f'{keys[\"OAuth\"]}'\n",
-    ")\n",
+    "file_path = \"../tonetags.txt\"\n",
     "\n",
-    "# Set search parameters here:\n",
-    "#\n",
-    "# Tumblr's API only supports searching for a single tag at a time\n",
-    "# Filter options are text, html, or raw\n",
-    "# Before - only search for posts before this time - in seconds past the epoch\n",
-    "# use calendar.timegm(time.gmtime()) to use the current epoch\n",
-    "tag = 'half-joke'\n",
-    "filter = 'text'\n",
-    "before = calendar.timegm(time.gmtime())\n",
+    "tone_tags = {}\n",
     "\n",
-    "#Set output file here:\n",
-    "outputPath = '../datasets/data_from_tumblr/'\n",
+    "with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "\tfor line in file:\n",
+    "\t\tkey, value = line.strip().split(':')\n",
+    "\t\ttone_tags[key.strip()] = value.strip().split(',')\n",
     "\n",
     "\n",
-    "filePath = outputPath + 'TumblrSearch-' + str(before) + '-' + tag.replace('\\\\', '') + '.csv'\n",
-    "with open(filePath, mode='a', encoding='utf-8', newline='') as results_file:\n",
-    "\t\tresults_writer = csv.writer(results_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_ALL)\n",
-    "\t\tresults_writer.writerow([\"timeStamp\", \"URL\", \"blogName\", \"title\", \"tags\", \"body\"])\n",
+    "for key, values in tone_tags.items():\n",
+    "\ttone_tags[key] = [item for item in tone_tags[key] if '/' not in item]\n",
     "\n",
-    "\n",
-    "print(\"Searching Tumblr for 100 posts tagged \\'\" + tag + \"\\'\")\n",
-    "\n",
-    "j = 1\n",
-    "\n",
-    "#If you really wanted to, you could increase this number here to increase the number of batches\n",
-    "#Tumblr's API limits you to 20 results at a time, but we can loop through the search multiple times\n",
-    "#BUT I'd be cautious about making this number too big - to avoid running into api call limits\n",
-    "\n",
-    "while j < 5:\n",
-    "\t#Run the tag search and snag the results\n",
-    "\tsearchResults = tumblr.tagged(tag, filter=filter, before=before)\n",
-    "\tprint(\"Batch \" + str(j) + \" of 5\")\n",
-    "\tprint(str(len(searchResults)) + \" results retreived\")\n",
-    "\tfor i in searchResults:\n",
-    "\t\tblog_name = (i)['blog_name']\n",
-    "\t\tdate = (i)['date']\n",
-    "\n",
-    "\t\turl = (i)['post_url']\n",
-    "\n",
-    "\t\ttry:\n",
-    "\t\t\ttitle = (i)['title']\n",
-    "\t\texcept:\n",
-    "\t\t\ttitle = \"Couldn't Get Title\"\n",
-    "\t\ttry:\n",
-    "\t\t\ttags = (i)['tags']\n",
-    "\t\texcept:\n",
-    "\t\t\ttags = \"Couldn't Get tags\"\n",
-    "\t\ttry:\n",
-    "\t\t\tbody = (i)['body']\n",
-    "\t\texcept:\n",
-    "\t\t\tbody = \"Couldn't Get Post Body\"\n",
-    "\t\twith open(filePath, mode='a', encoding='utf-8', newline='') as results_file:\n",
-    "\t\t\tresults_writer = csv.writer(results_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_ALL)\n",
-    "\t\t\ttry:\n",
-    "\t\t\t\tresults_writer.writerow([date, unidecode(url), blog_name, title, tags, body])\n",
-    "\t\t\t\tprint(\"Successfully Wrote Row for post from \" + date)\n",
-    "\t\t\texcept:\n",
-    "\t\t\t\tprint(\"Error Writing Row\")\n",
-    "\t#Next we make note of the oldest timestamp\n",
-    "\t\toldestTime = (i)['timestamp']\n",
-    "\tbefore = oldestTime\n",
-    "\tj = j + 1\n",
-    "print(\"Finished!\")\n",
-    "print(\"Saved CSV to \" + filePath)"
+    "for key, values in tone_tags.items():\n",
+    "\tprint(f\"{key}: {values}\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-31T19:26:43.656824Z",
+     "start_time": "2024-03-31T19:26:43.646722Z"
+    }
+   },
+   "execution_count": 3
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start of parsing affectionate\n",
+      "API calls limit reached\n"
+     ]
+    }
+   ],
+   "source": [
+    "tumblr = pytumblr.TumblrRestClient(api_key)\n",
+    "tumblr_filter = 'text'\n",
+    "start_time_search = calendar.timegm(time.gmtime())\n",
+    "\n",
+    "output_path = '../datasets/data_from_tumblr/'\n",
+    "file_path = output_path + 'TumblrSearch'\n",
+    "tumblr_df = pd.DataFrame(columns=['timestamp', 'URL', 'blogName', 'title', 'tags', 'text'])\n",
+    "num_of_query = 1\n",
+    "api_limit_reached = False\n",
+    "\n",
+    "for tag, tags in tone_tags.items():\n",
+    "\toldest_time = start_time_search\n",
+    "\tfor tone_tag in tags:\n",
+    "\t\tresults = []\n",
+    "\t\tprint(f\"Start of parsing {tone_tag}\\n\")\n",
+    "\t\twhile True:\n",
+    "\t\t\tsearchResults = tumblr.tagged(tone_tag, filter=tumblr_filter, before=oldest_time)\n",
+    "\t\t\tfor post in searchResults:\n",
+    "\t\t\t\tif post == 'meta':\n",
+    "\t\t\t\t\tprint(\"API calls limit reached\")\n",
+    "\t\t\t\t\tapi_limit_reached = True\n",
+    "\t\t\t\t\tbreak\n",
+    "\t\t\t\tblog_name = post['blog_name']\n",
+    "\t\t\t\tdate = post['date']\n",
+    "\t\t\t\turl = post['post_url']\n",
+    "\t\t\t\ttry:\n",
+    "\t\t\t\t\ttitle = post['title']\n",
+    "\t\t\t\texcept:\n",
+    "\t\t\t\t\ttitle = \"Couldn't Get Title\"\n",
+    "\t\t\t\ttry:\n",
+    "\t\t\t\t\ttags = post['tags']\n",
+    "\t\t\t\texcept:\n",
+    "\t\t\t\t\ttags = \"Couldn't Get tags\"\n",
+    "\t\t\t\ttry:\n",
+    "\t\t\t\t\tbody = post['body']\n",
+    "\t\t\t\texcept:\n",
+    "\t\t\t\t\tbody = \"Couldn't Get Post Body\"\n",
+    "\t\t\t\tresults.append((date, url, blog_name, title, tags, body))\n",
+    "\t\t\t\toldest_time = post['timestamp']\n",
+    "\n",
+    "\t\t\tif api_limit_reached:\n",
+    "\t\t\t\tbreak\n",
+    "\t\t\t\n",
+    "\t\t\tprint(f\"Number of query: {num_of_query}\")\n",
+    "\t\t\tnum_of_query += 1\n",
+    "\t\t\tif len(searchResults) < 20:\n",
+    "\t\t\t\tprint(f\"End of tag {tone_tag}\")\n",
+    "\t\t\t\tbreak\n",
+    "\n",
+    "\t\tif api_limit_reached:\n",
+    "\t\t\tbreak\n",
+    "\n",
+    "\t\tresults_df = pd.DataFrame(results, columns=['timestamp', 'URL', 'blogName', 'title', 'tags', 'text'])\n",
+    "\t\ttumblr_df = pd.concat([tumblr_df, results_df])\n",
+    "\t\ttumblr_df = tumblr_df.to_csv(file_path + '-' + str(time.time()) + '.csv')\n",
+    "\n",
+    "\tif api_limit_reached:\n",
+    "\t\tbreak"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-31T20:19:08.558636Z",
+     "start_time": "2024-03-31T20:19:07.995967Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
    "outputs": [],
    "source": [],
    "metadata": {
