Update tumbler parser notebook to account for reaching API calls limit

--- a/notebooks/parse_tumblr.ipynb
+++ b/notebooks/parse_tumblr.ipynb
@@ -2,31 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# https://github.com/boilingpenguin/tumblr-scraper\n",
     "# https://github.com/tumblr/docs/blob/master/api.md"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-31T21:56:38.416643Z",
+     "start_time": "2024-03-31T21:56:38.413490Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import pytumblr\n",
     "import calendar\n",
     "import time\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from tqdm import tqdm"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T19:26:40.320337Z",
-     "start_time": "2024-03-31T19:26:38.456490Z"
+     "end_time": "2024-03-31T21:56:38.809433Z",
+     "start_time": "2024-03-31T21:56:38.417765Z"
     }
    }
   },
@@ -40,11 +45,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T19:26:43.028692Z",
-     "start_time": "2024-03-31T19:26:43.019748Z"
+     "end_time": "2024-03-31T21:56:38.813429Z",
+     "start_time": "2024-03-31T21:56:38.810581Z"
     }
    },
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -116,22 +121,42 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T19:26:43.656824Z",
-     "start_time": "2024-03-31T19:26:43.646722Z"
+     "end_time": "2024-03-31T21:56:38.819608Z",
+     "start_time": "2024-03-31T21:56:38.814443Z"
     }
    },
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Start of parsing affectionate\n",
-      "API calls limit reached\n"
+      "API calls limit reached\n",
+      "Current tag: affectionate\n",
+      "Sleep for 3600 seconds to try again\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 12/3601 [00:13<1:04:52,  1.08s/it]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[5], line 49\u001B[0m\n\u001B[0;32m     47\u001B[0m \t\u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mSleep for 3600 seconds to try again\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m     48\u001B[0m \t\u001B[38;5;28;01mfor\u001B[39;00m _ \u001B[38;5;129;01min\u001B[39;00m tqdm(\u001B[38;5;28mrange\u001B[39m(\u001B[38;5;241m3601\u001B[39m)):\n\u001B[1;32m---> 49\u001B[0m \t\ttime\u001B[38;5;241m.\u001B[39msleep(\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m     51\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m num_of_query \u001B[38;5;241m%\u001B[39m \u001B[38;5;241m10\u001B[39m:\n\u001B[0;32m     52\u001B[0m \t\u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mNumber of query: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mnum_of_query\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
@@ -156,6 +181,7 @@
     "\t\t\tfor post in searchResults:\n",
     "\t\t\t\tif post == 'meta':\n",
     "\t\t\t\t\tprint(\"API calls limit reached\")\n",
+    "\t\t\t\t\tprint(f\"Current tag: {tone_tag}\")\n",
     "\t\t\t\t\tapi_limit_reached = True\n",
     "\t\t\t\t\tbreak\n",
     "\t\t\t\tblog_name = post['blog_name']\n",
@@ -177,38 +203,33 @@
     "\t\t\t\toldest_time = post['timestamp']\n",
     "\n",
     "\t\t\tif api_limit_reached:\n",
-    "\t\t\t\tbreak\n",
+    "\t\t\t\tresults_df = pd.DataFrame(results, columns=['timestamp', 'URL', 'blogName', 'title', 'tags', 'text'])\n",
+    "\t\t\t\ttumblr_df = pd.concat([tumblr_df, results_df])\n",
+    "\t\t\t\ttumblr_df = tumblr_df.to_csv(file_path + '-' + str(time.time()) + '.csv')\n",
+    "\t\t\t\tresults = []\n",
+    "\t\t\t\tprint(\"Sleep for 3600 seconds to try again\")\n",
+    "\t\t\t\tfor _ in tqdm(range(3601)):\n",
+    "\t\t\t\t\ttime.sleep(1)\n",
     "\t\t\t\n",
-    "\t\t\tprint(f\"Number of query: {num_of_query}\")\n",
+    "\t\t\tif num_of_query % 10:\n",
+    "\t\t\t\tprint(f\"Number of query: {num_of_query}\")\n",
+    "\t\t\t\t\n",
     "\t\t\tnum_of_query += 1\n",
+    "\t\t\t\n",
     "\t\t\tif len(searchResults) < 20:\n",
-    "\t\t\t\tprint(f\"End of tag {tone_tag}\")\n",
+    "\t\t\t\tprint(f\"End of tag {tone_tag}\\n\")\n",
     "\t\t\t\tbreak\n",
-    "\n",
-    "\t\tif api_limit_reached:\n",
-    "\t\t\tbreak\n",
     "\n",
     "\t\tresults_df = pd.DataFrame(results, columns=['timestamp', 'URL', 'blogName', 'title', 'tags', 'text'])\n",
     "\t\ttumblr_df = pd.concat([tumblr_df, results_df])\n",
-    "\t\ttumblr_df = tumblr_df.to_csv(file_path + '-' + str(time.time()) + '.csv')\n",
-    "\n",
-    "\tif api_limit_reached:\n",
-    "\t\tbreak"
+    "\t\ttumblr_df = tumblr_df.to_csv(file_path + '-' + str(time.time()) + '.csv')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T20:19:08.558636Z",
-     "start_time": "2024-03-31T20:19:07.995967Z"
+     "end_time": "2024-03-31T21:56:52.784612Z",
+     "start_time": "2024-03-31T21:56:38.819608Z"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
    }
   }
  ],
