--- a/notebooks/Test_model.ipynb
+++ b/notebooks/Test_model.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-14T19:21:32.404233Z",
-     "start_time": "2024-04-14T19:21:29.843287Z"
+     "end_time": "2024-04-14T19:35:03.888417Z",
+     "start_time": "2024-04-14T19:35:01.311266Z"
     }
    },
    "outputs": [],
@@ -38,8 +38,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-14T19:21:32.409137Z",
-     "start_time": "2024-04-14T19:21:32.405300Z"
+     "end_time": "2024-04-14T19:35:03.893504Z",
+     "start_time": "2024-04-14T19:35:03.889546Z"
     }
    },
    "id": "c65c044a65454f1f",
@@ -54,8 +54,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-14T19:21:35.831869Z",
-     "start_time": "2024-04-14T19:21:32.409137Z"
+     "end_time": "2024-04-14T19:35:07.485061Z",
+     "start_time": "2024-04-14T19:35:03.894020Z"
     }
    },
    "id": "e6c2f633b75d7bf5",
@@ -65,33 +65,18 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "labels = dataset.tags.unique().tolist()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-14T19:21:35.837913Z",
-     "start_time": "2024-04-14T19:21:35.832896Z"
-    }
-   },
-   "id": "cb412c80a2d5654e",
-   "execution_count": 4
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
+    "labels = dataset.tags.unique().tolist()\n",
     "dataset.tags = dataset.tags.apply(labels.index)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-14T19:21:35.861265Z",
-     "start_time": "2024-04-14T19:21:35.840010Z"
+     "end_time": "2024-04-14T19:35:07.510110Z",
+     "start_time": "2024-04-14T19:35:07.486178Z"
     }
    },
-   "id": "9529e251a79ab2f2",
-   "execution_count": 5
+   "id": "cb412c80a2d5654e",
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -104,12 +89,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-14T19:21:36.133688Z",
-     "start_time": "2024-04-14T19:21:35.862353Z"
+     "end_time": "2024-04-14T19:35:07.751892Z",
+     "start_time": "2024-04-14T19:35:07.511215Z"
     }
    },
    "id": "2a5ca6e795d87b9a",
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -120,12 +105,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-14T19:21:36.137960Z",
-     "start_time": "2024-04-14T19:21:36.134693Z"
+     "end_time": "2024-04-14T19:35:07.757161Z",
+     "start_time": "2024-04-14T19:35:07.753273Z"
     }
    },
    "id": "7fdea20e8253a596",
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -155,12 +140,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-14T19:21:36.162374Z",
-     "start_time": "2024-04-14T19:21:36.138468Z"
+     "end_time": "2024-04-14T19:35:07.780857Z",
+     "start_time": "2024-04-14T19:35:07.758249Z"
     }
    },
    "id": "9f445b35dd5d44cc",
-   "execution_count": 8
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -177,17 +162,17 @@
     "        while len(data_ids[i]) < max_length:\n",
     "            data_ids[i].append(vocab[\"<pad>\"])\n",
     "    \n",
-    "    return torch.tensor(data_ids), labels"
+    "    return data_ids, labels"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-14T19:21:36.166998Z",
-     "start_time": "2024-04-14T19:21:36.163460Z"
+     "end_time": "2024-04-14T19:35:07.785673Z",
+     "start_time": "2024-04-14T19:35:07.781946Z"
     }
    },
    "id": "e0cbdb1f68dcd930",
-   "execution_count": 9
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -198,12 +183,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-14T19:21:36.174874Z",
-     "start_time": "2024-04-14T19:21:36.168037Z"
+     "end_time": "2024-04-14T19:35:07.793733Z",
+     "start_time": "2024-04-14T19:35:07.786777Z"
     }
    },
    "id": "9c2fea4ab7191c21",
-   "execution_count": 10
+   "execution_count": 9
   },
   {
    "cell_type": "code",
@@ -215,12 +200,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-14T19:21:38.252732Z",
-     "start_time": "2024-04-14T19:21:36.175878Z"
+     "end_time": "2024-04-14T19:35:09.852288Z",
+     "start_time": "2024-04-14T19:35:07.794922Z"
     }
    },
    "id": "b6d505604a8eea15",
-   "execution_count": 11
+   "execution_count": 10
   },
   {
    "cell_type": "code",
@@ -231,12 +216,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-14T19:21:38.256716Z",
-     "start_time": "2024-04-14T19:21:38.253777Z"
+     "end_time": "2024-04-14T19:35:09.855877Z",
+     "start_time": "2024-04-14T19:35:09.853407Z"
     }
    },
    "id": "cb15c218600f6655",
-   "execution_count": 12
+   "execution_count": 11
   },
   {
    "cell_type": "code",
@@ -248,12 +233,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-14T19:21:38.265307Z",
-     "start_time": "2024-04-14T19:21:38.257823Z"
+     "end_time": "2024-04-14T19:35:09.865081Z",
+     "start_time": "2024-04-14T19:35:09.855877Z"
     }
    },
    "id": "6b0694c779e43867",
-   "execution_count": 13
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -272,7 +257,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "aacbfda88b2542e39e9c1c5f1214f9f2"
+       "model_id": "bf5b57c352f4406cbc16538783ef60fc"
       }
      },
      "metadata": {},
@@ -287,12 +272,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-14T19:22:19.166463Z",
-     "start_time": "2024-04-14T19:21:38.266312Z"
+     "end_time": "2024-04-14T19:35:29.522662Z",
+     "start_time": "2024-04-14T19:35:09.866158Z"
     }
    },
    "id": "91b1cd1f9f591eec",
-   "execution_count": 14
+   "execution_count": 13
   },
   {
    "cell_type": "code",
@@ -305,12 +290,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-14T19:29:03.284182Z",
-     "start_time": "2024-04-14T19:29:02.817890Z"
+     "end_time": "2024-04-14T19:35:29.818811Z",
+     "start_time": "2024-04-14T19:35:29.523757Z"
     }
    },
    "id": "f3c19d06f79a2c5c",
-   "execution_count": 47
+   "execution_count": 14
   },
   {
    "cell_type": "code",
@@ -321,12 +306,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-14T19:29:40.994091Z",
-     "start_time": "2024-04-14T19:29:40.956921Z"
+     "end_time": "2024-04-14T19:35:29.831044Z",
+     "start_time": "2024-04-14T19:35:29.819914Z"
     }
    },
    "id": "70e6961e0be09d92",
-   "execution_count": 54
+   "execution_count": 15
   },
   {
    "cell_type": "code",
@@ -337,21 +322,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-14T19:29:41.369571Z",
-     "start_time": "2024-04-14T19:29:41.365887Z"
+     "end_time": "2024-04-14T19:35:29.835711Z",
+     "start_time": "2024-04-14T19:35:29.832130Z"
     }
    },
    "id": "5ba182a485933338",
-   "execution_count": 55
+   "execution_count": 16
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-14T19:35:29.839646Z",
+     "start_time": "2024-04-14T19:35:29.837760Z"
+    }
    },
-   "id": "8c89d0af9888a648"
+   "id": "8c89d0af9888a648",
+   "execution_count": 16
   }
  ],
  "metadata": {
